@startuml AWM_Garage_Class_Diagram_Optimized

skinparam class {
  BackgroundColor #F9F9F9
  ArrowColor #2B3856
  BorderColor #2B3856
  FontSize 13
  AttributeFontSize 13
  FontName Helvetica
}

skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 50
hide empty members

' ========== ENTITIES ==========
class User {
  +id: bigint
  +username: string
  +password: string
  +role: string
  +email: string
  +full_name: string
  +phone: string
  +address: string
  +province_name: string
  +city_name: string
  +district_name: string
  +subdistrict_name: string
  +zip_code: string
  +address_details: string
  +latitude: decimal
  +longitude: decimal
  +phone_verified_at: timestamp
  +remember_token: string
  +created_at: timestamp
  +updated_at: timestamp
  --
  +orders(): HasMany<Order>
  +purchaseRequests(): HasMany<PurchaseRequest>
  +otps(): HasMany<Otp>
  +login(LoginRequest): RedirectResponse
  +logout(Request): RedirectResponse
  +register(Request): RedirectResponse
  +editProfile(Request): Response
  +updateProfile(Request)
  +sendOtp(Request)
  +verifyOtp(Request)
  +deleteProfile(Request)
  +requestPasswordReset(Request): RedirectResponse
  +resetPassword(Request): RedirectResponse
  +updatePassword(Request): RedirectResponse
}

class Service {
  +id: bigint
  +service_name: string
  +description: text
  +base_price: decimal
  +deleted_at: timestamp
  +created_at: timestamp
  +updated_at: timestamp
  --
  +purchaseRequests(): HasMany<PurchaseRequest>
  +additionals(): HasMany<ServiceAdditional>
  +index()
  +create()
  +store(Request)
  +edit($id)
  +update(Request, $id)
  +destroy($id)
}

class AdditionalType {
  +id: bigint
  +name: string
  +created_at: timestamp
  +updated_at: timestamp
  --
  +serviceAdditionals(): HasMany<ServiceAdditional>
  +store(Request)
}

class ServiceAdditional {
  +id: bigint
  +service_id: bigint
  +additional_type_id: bigint
  +name: string
  +image_path: string
  +additional_price: decimal
  +created_at: timestamp
  +updated_at: timestamp
  --
  +service(): BelongsTo<Service>
  +additionalType(): BelongsTo<AdditionalType>
}

class PurchaseRequest {
  +id: bigint
  +user_id: bigint
  +service_id: bigint
  +description: text
  +photo_path: json
  +weight: decimal
  +shipping_cost_to_admin: decimal
  +shipping_to_admin_details: json
  +source_address: json
  +destination_address: json
  +shipping_to_customer_preference: json
  +additional_details: json
  +status: string
  +created_at: timestamp
  +updated_at: timestamp
  --
  +user(): BelongsTo<User>
  +service(): BelongsTo<Service>
  +offerPrice(): HasOne<OfferPrice>
  +index()
  +create()
  +store(Request)
  +show($id)
  +edit($id)
  +update(Request, $id)
  +acceptOffer($id)
  +rejectOffer($id)
  +adminIndex()
  +showAdmin($id)
  +reject($id)
  +calculateShippingCost(Request)
  +calculateShippingCostToCustomer(Request)
}

class OfferPrice {
  +id: bigint
  +pr_id: bigint
  +service_price: decimal
  +dp_amount: decimal
  +estimation_days: integer
  +shipping_cost_to_customer: decimal
  +shipping_to_customer_details: json
  +total_price: decimal
  +status: string
  +created_at: timestamp
  +updated_at: timestamp
  --
  +purchaseRequest(): BelongsTo<PurchaseRequest>
  +order(): HasOne<Order>
  +payments(): HasMany<Payment>
  +storeOfferPrice(Request, $id)
  +updateOfferPrice(Request, $id)
}

class Order {
  +order_id: string
  +offerprice_id: bigint
  +completed_photo_path: json
  +shipping_receipt: string
  +shipping_receipt_customer: string
  +shipping_proof_customer: string
  +status: string
  +customer_confirmation: string
  +created_at: timestamp
  +updated_at: timestamp
  --
  +offerPrice(): BelongsTo<OfferPrice>
  +complains(): HasMany<OrderComplain>
  +shipping(): HasOne<Shipping>
  +reviews(): HasMany<Review>
  +index()
  +show($order_id)
  +confirmReceived($order_id)
  +uploadCompletedPhoto(Request, $order_id)
  +uploadRevisionPhoto(Request, $order_id)
  +markAsReadyToShip($order_id)
  +indexCustomer()
  +showCustomer($order_id)
  +confirmShipmentCustomer(Request, $order_id)
  +confirmCustomerOrder(Request, $order_id)
}

class OrderComplain {
  +id: bigint
  +order_id: string
  +customer_feedback: text
  +revised_photo_path: json
  +created_at: timestamp
  +updated_at: timestamp
  --
  +order(): BelongsTo<Order>
}

class Payment {
  +id: bigint
  +offerprice_id: bigint
  +amount: decimal
  +payment_method: string
  +payment_type: string
  +transaction_id: string
  +payment_status: string
  +payment_time: timestamp
  +created_at: timestamp
  +updated_at: timestamp
  --
  +offerPrice(): BelongsTo<OfferPrice>
  +createDP($offerprice_id)
  +storeDP(Request)
  +createFull($offerPriceId)
  +storeFull(Request)
  +handleCallback(Request)
}

class Shipping {
  +shipping_id: bigint
  +order_id: string
  +courier_code: string
  +courier_name: string
  +courier_service: string
  +tracking_number: string
  +shipping_date: timestamp
  +received_date: timestamp
  +status: string
  +created_at: timestamp
  +updated_at: timestamp
  --
  +order(): BelongsTo<Order>
  +index()
  +show($shipping_id)
  +store(Request, $order_id)
  +markAsDelivered($shipping_id)
  +createShipment(Request, $order_id)
  +confirmReceivedCustomer(Request, $order_id)
}

class Location {
  +id: bigint
  +label: string
  +province_name: string
  +city_name: string
  +district_name: string
  +subdistrict_name: string
  +zip_code: string
  +created_at: timestamp
  +updated_at: timestamp
  --
  +search(Request)
}

class Review {
  +id: bigint
  +order_id: string
  +rating: integer
  +review: text
  +media_paths: json
  +created_at: timestamp
  +updated_at: timestamp
  --
  +order(): BelongsTo<Order>
  +storeReview(Request, $order_id)
  +index()
}

class Otp {
  +id: bigint
  +user_id: bigint
  +phone: string
  +code: string
  +expires_at: timestamp
  +created_at: timestamp
  +updated_at: timestamp
  --
  +user(): BelongsTo<User>
}

class Dashboard {
  --
  +index()
}

class Report {
  --
  +index(Request)
  +exportPDF(Request)
}

' ========== RELATIONSHIPS ==========
User "1" -- "*" PurchaseRequest
User "1" -- "*" Order : via purchaseRequest.offerPrice
User "1" -- "*" Otp

Service "1" -- "*" PurchaseRequest
Service "1" -- "*" ServiceAdditional

AdditionalType "1" -- "*" ServiceAdditional
ServiceAdditional "1" -- "1" Service
ServiceAdditional "1" -- "1" AdditionalType

PurchaseRequest "1" -- "1" User
PurchaseRequest "1" -- "1" Service
PurchaseRequest "1" -- "0..1" OfferPrice

OfferPrice "1" -- "1" PurchaseRequest
OfferPrice "1" -- "0..1" Order
OfferPrice "1" -- "*" Payment

Order "1" -- "1" OfferPrice
Order "1" -- "*" OrderComplain
Order "1" -- "0..1" Shipping
Order "1" -- "*" Review

OrderComplain "1" -- "1" Order
Payment "1" -- "1" OfferPrice
Shipping "1" -- "1" Order
Review "1" -- "1" Order
Otp "1" -- "1" User

' ========== LAYOUT ADJUSTMENTS ==========
together {
  class User
  class Otp
}

together {
  class Service
  class ServiceAdditional
  class AdditionalType
}

together {
  class PurchaseRequest
  class OfferPrice
  class Order
}

together {
  class OrderComplain
  class Payment
  class Shipping
  class Review
}

together {
  class Location
  class Dashboard
  class Report
}

' ========== NOTES ==========
note top of User
  Manages authentication, profile,
  and user-specific actions
end note

note bottom of Service
  Represents service catalog with
  soft-delete functionality
end note

note right of PurchaseRequest
  Core entity for customer
  service requests
end note

note left of Order
  Tracks order lifecycle from
  creation to completion
end note



@enduml